[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/backgrounds/backgrounds.gd" type="Script" id=1]
[ext_resource path="res://game/backgrounds/bg lecturehall.jpg" type="Texture" id=2]
[ext_resource path="res://addons/Rakugo/nodes/rakugo_node2d.gd" type="Script" id=3]
[ext_resource path="res://game/backgrounds/bg club.jpg" type="Texture" id=4]
[ext_resource path="res://game/backgrounds/bg meadow.jpg" type="Texture" id=5]
[ext_resource path="res://game/backgrounds/bg uni.jpg" type="Texture" id=6]

[node name="backgrounds" type="Node2D"]
position = Vector2( 511.814, 298.957 )
scale = Vector2( 0.8, 0.835 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="bg lecturehall" type="Sprite" parent="."]
texture = ExtResource( 2 )
script = ExtResource( 3 )
node_id = ""

[node name="bg club" type="Sprite" parent="."]
texture = ExtResource( 4 )
script = ExtResource( 3 )
node_id = ""

[node name="bg meadow" type="Sprite" parent="."]
texture = ExtResource( 5 )
script = ExtResource( 3 )
node_id = ""

[node name="bg uni" type="Sprite" parent="."]
texture = ExtResource( 6 )
script = ExtResource( 3 )
node_id = ""
[connection signal="visibility_changed" from="bg lecturehall" to="." method="_on_bg_lecturehall_visibility_changed"]
[connection signal="visibility_changed" from="bg club" to="." method="_on_bg_club_visibility_changed"]
[connection signal="visibility_changed" from="bg meadow" to="." method="_on_bg_meadow_visibility_changed"]
[connection signal="visibility_changed" from="bg uni" to="." method="_on_bg_uni_visibility_changed"]
